# QT-book-inventory

./: .ninja_deps  .ninja_log  CMakeCache.txt.prev  CMakeLists.txt  CMakeLists.txt.user.74cc8f6  CMakeLists.txt.user.9232094  Log.txt  Log_file.h  Login.db  Receipt.txt  addbook.cpp  addbook.h  addbook.ui  adduser.cpp  adduser.h  adduser.ui  admin.cpp  admin.h  admin.ui  build.ninja  cmake_install.cmake  dbmanager.cpp  dbmanager.h  dialog.cpp  dialog.ui  log.cpp  log.h  loginwindow2.cpp  loginwindow2.h  loginwindow2.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notes.txt  profile.cpp  profile.h  profile.ui  qtbookinventory.cpp  qtbookinventory.h  (+6 more)
